# OpenParEM

./: INSTALL  README.md
doc/: Installation_Execution.tex  OpenParEM2D_Theory_Methodology_Accuracy.tex  OpenParEM2D_Users_Manual.tex  OpenParEM3D_Theory_Methodology_Accuracy.tex  OpenParEM3D_Users_Manual.tex  OpenParEM_revisions.tex  builder_Users_Manual.tex
regression/OpenParEM2D/: README.txt  check.sh  regression_case_list.txt
regression/OpenParEM2D/Lee_microstrip/full_line/: Lee_microstrip_test_prototype_test_cases.csv
regression/OpenParEM2D/Lee_microstrip/full_line_omit_current/: Lee_microstrip_test_fields.csv
regression/OpenParEM2D/Lee_microstrip/full_line_omit_voltage/: Lee_microstrip_derived_test_cases.csv  Lee_microstrip_test_fields.csv
regression/OpenParEM2D/Lee_microstrip/full_modal_omit_voltage/: Lee_microstrip_test_prototype_test_cases.csv
regression/OpenParEM2D/Lee_microstrip/half/: Lee_microstrip_derived_test_cases.csv  Lee_microstrip_test_fields.csv  Lee_microstrip_test_prototype_test_cases.csv
regression/OpenParEM2D/Simonovich_stripline/: Simonovich_stripline_test_cases.csv  Simonovich_stripline_test_prototype_test_cases.csv
regression/OpenParEM2D/WR90_rectangular_waveguide/WR90_PMC_symmetry/: WR90half_test_fields.csv  WR90half_test_prototype_test_cases.csv
regression/OpenParEM2D/coaxEighth/: coax_test_fields.csv  coax_test_prototype_test_cases.csv
regression/OpenParEM2D/coaxEighthAlt/: coax_test_prototype_test_cases.csv
regression/OpenParEM2D/coax_line/: coax_test_fields.csv  coax_test_prototype_test_cases.csv
regression/OpenParEM2D/coax_modal_run_test/: coax.proj  coax_exact_test_cases.csv  coax_test_fields.csv  coax_test_prototype_test_cases.csv
regression/OpenParEM2D/differential_pair/diff_pair_line/: diffPair_test_prototype_test_cases.csv
regression/OpenParEM2D/differential_pair/diff_pair_line_wide_spacing/: diffPair_test_prototype_test_cases.csv
regression/OpenParEM2D/differential_pair/diff_pair_modal/: diffPair_test_prototype_test_cases.csv
regression/OpenParEM2D/differential_pair/diff_pair_modal_symmetry_even/: diffPair_test_prototype_test_cases.csv
regression/OpenParEM2D/differential_pair/diff_pair_modal_symmetry_odd/: diffPair_test_prototype_test_cases.csv
regression/OpenParEM2D/partially_filled_rect_waveguide/PartFilled_order_3_norefinement/: PartFilled_test_fields.csv  PartFilled_test_prototype_test_cases.csv
regression/OpenParEM2D/partially_filled_rect_waveguide/PartFilled_order_3_refinement/: PartFilled_test_fields.csv  PartFilled_test_prototype_test_cases.csv
regression/OpenParEM2D/partially_filled_rect_waveguide/PartFilled_order_4_norefinement/: PartFilled_test_fields.csv  PartFilled_test_prototype_test_cases.csv
regression/OpenParEM2D/partially_filled_rect_waveguide/PartFilled_order_4_norefinement_widebandwidth/: PartFilled.proj  PartFilled_exact_test_cases.csv  PartFilled_test_cases.csv  PartFilled_test_fields.csv  PartFilled_test_prototype_test_cases.csv
regression/OpenParEM2D/partially_filled_rect_waveguide/PartFilled_order_5_norefinement/: PartFilled_test_fields.csv  PartFilled_test_prototype_test_cases.csv
regression/OpenParEM2D/partially_filled_rect_waveguide/PartFilled_order_6_norefinement/: PartFilled_test_fields.csv  PartFilled_test_prototype_test_cases.csv
regression/OpenParEM2D/permeability/partially_filled_rect_waveguide/: PartFilled_test_fields.csv  PartFilled_test_prototype_test_cases.csv
regression/OpenParEM2D/permeability/rectangular_waveguide/: WR90_test_fields.csv  WR90_test_prototype_test_cases.csv
regression/OpenParEM3D/: README.txt  check.sh  regression_case_list.txt  regression_results.csv.archive
regression/OpenParEM3D/WR75/T-Junction/: T-Junction.proj  T-Junction_iterations.txt
regression/OpenParEM3D/WR75/T-Junction_study/: T-Junction.proj
regression/OpenParEM3D/WR75/dielectric-loading/: dielectric-loading.proj  dielectric-loading_iterations.txt  dielectric-loading_test_cases.csv
regression/OpenParEM3D/WR75/dielectric-loading_study/: dielectric-loading.ods  dielectric-loading_AMR.proj  dielectric-loading_AMR_iterations.txt  dielectric-loading_no_AMR.proj  dielectric-loading_no_AMR_iterations.txt
regression/OpenParEM3D/WR90/opened/: opened.proj  opened_iterations.txt
regression/builder/: regression_case_list.txt  regression_results.csv.archive
scripts/: OpenParEM2D_test  OpenParEM3D_test  OpenParEM_build  OpenParEM_dist  OpenParEM_test  builder_test  checkErrors  process2D.sh  process3D.sh  proj_search  project_cleanup  regression
src/: Makefile.am  Makefile.in  autoconf.txt  configure  configure.ac  configure~  libtool
src/OpenParEM2D/: Makefile.am  Makefile.in  OpenParEM2D.cpp  fem2D.cpp  fem2D.hpp  fieldPoints.cpp  fieldPoints.hpp  process2D.cpp  process2D.hpp  project.c  project.h  results.cpp  results.hpp  simplify2D.cpp
src/OpenParEM3D/: Makefile.am  Makefile.in  OPEM_L2ZZErrorEstimator.cpp  OPEM_L2ZZErrorEstimator.hpp  OpenParEM3D.cpp  csr.c  csr.h  fem3D.cpp  fem3D.hpp  pattern.cpp  pattern.hpp  port.cpp  port.hpp  process3D.cpp  process3D.hpp  project.c  project.h  results.cpp  results.hpp  simplify3D.cpp  simplify3D.hpp  solveComplexLinearSystem.c  solveComplexLinearSystem.h  tline3.cpp
src/OpenParEMCommon/: Makefile.am  Makefile.in  OpenParEMmaterials.cpp  OpenParEMmaterials.hpp  Zsolve.c  Zsolve.h  config.h.in  config.h.in~  fem.cpp  fem.hpp  frequencyPlan.cpp  frequencyPlan.hpp  inputFrequency.h  jobrelated.cpp  jobrelated.hpp  keywordPair.cpp  keywordPair.hpp  license.cpp  license.hpp  license_process.cpp  mesh.cpp  mesh.hpp  misc.cpp  misc.hpp  path.cpp  path.hpp  petscErrorHandler.cpp  petscErrorHandler.hpp  prefix.c  prefix.h  sourcefile.cpp  sourcefile.hpp  triplet.c  triplet.h
src/builder/: Makefile.am  Makefile.in
tutorials/OpenParEM3D/microstrip_step/: microstrip_step.proj  microstrip_step_iterations.txt
tutorials/OpenParEM3D/monopole_antenna/: monopole_antenna.geo.opt  monopole_antenna.msh  monopole_antenna.proj  monopole_antenna_fields_iterations.txt  monopole_antenna_iterations.txt  refined_monopole_antenna.msh  results.ods
(+281 files in other folders)
