noinst_LIBRARIES = libOpenParEMCommon.a
libOpenParEMCommon_a_SOURCES = fem.cpp frequencyPlan.cpp jobrelated.cpp keywordPair.cpp license.cpp mesh.cpp misc.cpp OpenParEMmaterials.cpp path.cpp petscErrorHandler.cpp sourcefile.cpp prefix.c triplet.c Zsolve.c fem.hpp frequencyPlan.hpp jobrelated.hpp keywordPair.hpp license.hpp mesh.hpp misc.hpp OpenParEMmaterials.hpp path.hpp petscErrorHandler.hpp sourcefile.hpp prefix.h triplet.h Zsolve.h inputFrequency.h formatted_license.txt

